Refactor solutions with functional programming style
Major improvements following functional programming principles:

## Homework 8 (Exercise1.java)
- Replace Collectors.toList() with Java 16+ .toList() method
- Use flatMap(Optional::stream) for cleaner optional handling
- Convert EmployeeStats to immutable record with factory methods
- Add functional error recovery with Optional.or() chains
- Remove unused imports and apply single import style

## Homework 3 (Exercise3.java)
- Replace Collectors.joining() with functional reduce operations
- Use String::concat for more functional string building
- Remove Collectors import dependency

## Homework 5 (Exercise2.java)
- Replace Collectors.joining() with functional reduce for string concatenation
- Remove Collectors import dependency

## Test Files
- Convert wildcard imports to specific single imports in Exercise1Test
- Update test assertions to use record accessor methods (no 'get' prefix)

## Functional Programming Benefits Applied:
✅ Immutability with records and defensive copying
✅ Pure functions without side effects
✅ Function composition and Optional chaining
✅ Stream-based operations with flatMap
✅ Error recovery using functional patterns
✅ Reduced dependencies on utility classes

All 372 tests passing. Code follows modern Java 25 functional programming practices.